--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Spanish-American War, 1898 -- Juvenile fiction'
 - !lcsh 'War stories'
+- GITenberg
 title: 'Young Glory and the Spanish Cruiser
 
   A Brave Fight Against Odds'
